# quicktag

./: .gitattributes  .gitignore  Cargo.toml  README.md  dist-workspace.toml  expand_strings.py  wordlist.txt
.github/workflows/: build.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: classes.rs  lib.rs  tagtypes.rs  util.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: cache.rs  context.rs  lib.rs  signatures.rs
crates/strings/: .gitignore  Cargo.toml  build.rs
crates/strings/src/: lib.rs  localized.rs  wordlist.rs
crates/xg/: Cargo.toml  build.rs
crates/xg/src/: lib.rs  structs.rs
src/: classes.rs  main.rs  package_manager.rs  panic_handler.rs  references.rs  scanner.rs  tagtypes.rs  text.rs  util.rs  wordlist.rs
src/gui/: audio.rs  audio_events.rs  audio_list.rs  common.rs  dxgi.rs  external_file.rs  hextag.rs  hexview.rs  mod.rs  named_tags.rs  packages.rs  raw_strings.rs  signatures.rs  space_usage.rs  strings.rs  style.rs  tag.rs  texture.rs  texturelist.rs
src/gui/shaders/: copy.wgsl
src/gui/texture/: headers_ps.rs  headers_xbox.rs  swizzle_ps4.rs  swizzle_x360.rs
src/texture/: cache.rs  capture.rs  dxgi.rs  headers_pc.rs  headers_ps.rs  headers_xbox.rs  mod.rs  texture.rs
src/texture/swizzle/: mod.rs  swizzle_ps.rs  swizzle_xbox.rs
wix/: main.wxs
