[package]
name = "quicktag"
version = "0.6.2"
edition = "2021"

[dependencies]
# General
anyhow = "1.0.75"
bytemuck = "1.14.1"
chrono = "0.4.31"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.11.3"
game-detector = "0.1.4"
itertools = "0.13"
indexmap = "2.2.6"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4.20"
parking_lot = "0.12.1"
profiling = { version = "1.0.15", features = [] }
rustc-hash = "2.0.0"

# UI
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "persistence",
    "wgpu",
] }
egui_extras = "0.28.1"
egui-notify = "0.15.0"
native-dialog = "0.7.0"
opener = "0.7.0"
poll-promise = { version = "0.3.0", features = ["tokio"] }
rayon = "1.8.0"

# (de)serialization
base64 = "0.22.0"
bincode = "2.0.0-rc.3"
binrw = "0.13.3"
destiny-pkg = { version = "0.12.2", features = ["bincode"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
vgmstream = { git = "https://github.com/cohaereo/vgmstream-rs/", version = "0.1.4" }
wav = "1.0.0"
zstd = { version = "0.13.0", features = ["zstdmt"] }
either = "1.10.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
image = { version = "0.25.1", features = ["png"], default-features = false }
regex = "1.10.4"
clipboard-win = "5.3.1"
rodio = "0.18.1"

# tiger-parse structure crates
alkahest-data = { git = "https://github.com/cohaereo/alkahest.git" }
#cryptarch-data = { git = "https://github.com/v4nguard/cryptarch.git" }
#dawn-data = { git = "https://github.com/cohaereo/dawn.git" }

[features]
default = ["wordlist"]
# Embeds `wordlist.txt` into the executable and adds it's contents to the raw string list
wordlist = []

[profile.dev]
opt-level = 3
# cohae: Overflow checks are nice for some, but not for us
overflow-checks = false

[profile.release]
debug = "limited"
#opt-level = 3
# strip = "symbols"
# lto = "fat"
# debug = 1
