[workspace]
members = [
    "crates/core",
    "crates/scanner",
    "crates/strings"
]

[workspace.dependencies]
anyhow = "1"
binrw = "0.13.3"
epaint = "0.28.1"
itertools = "0.14"
log = "0.4"
parking_lot = "0.12"
profiling = { version = "1", features = [] }
rustc-hash = "2.0.0"
tiger-pkg = { version = "0.18.4", features = ["global_manager_instance"] }

[package]
name = "quicktag"
version = "0.8.0"
edition = "2024"

[dependencies]
quicktag-core = { path = "./crates/core" }
quicktag-scanner = { path = "./crates/scanner" }
quicktag-strings = { path = "./crates/strings" }

# General
anyhow.workspace = true
bytemuck = "1.14.1"
chrono = "0.4.31"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.11.3"
game-detector = "0.1.4"
hlsldecompiler = { git = "https://github.com/cohaereo/hlsldecompiler-rs" }
indexmap = "2.2.6"
itertools.workspace = true
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log.workspace = true
notify = "7.0.0"
parking_lot.workspace = true
profiling.workspace = true
rustc-hash.workspace = true

# UI
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "persistence",
    "wgpu",
] }
egui_extras = { version = "0.28.1", features = ["syntect"] }
egui-notify = "0.15.0"
native-dialog = "0.7.0"
opener = "0.7.0"
poll-promise = { version = "0.3.0", features = ["tokio"] }
rayon = "1.8.0"

# (de)serialization
base64 = "0.22.0"
bincode = "2.0.0-rc.3"
binrw = "0.13.3"
clipboard-win = "5.3.1"
either = "1.10.0"
image = { version = "0.25.1", features = ["png"], default-features = false }
regex = "1.10.4"
rodio = "0.18.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tiger-pkg.workspace = true
tokio = { version = "1.37.0", features = ["rt", "macros"] }
vgmstream = { git = "https://github.com/cohaereo/vgmstream-rs/", version = "0.1.5", optional = true }
wav = "1.0.0"

# tiger-parse structure crates
# alkahest-data = { git = "https://github.com/cohaereo/alkahest.git" }
#cryptarch-data = { git = "https://github.com/v4nguard/cryptarch.git" }
#dawn-data = { git = "https://github.com/cohaereo/dawn.git" }

[features]
default = ["wordlist", "audio"]
# Embeds `wordlist.txt` into the executable and adds it's contents to the raw string list
wordlist = []
audio = ["vgmstream"]

[profile.dev]
opt-level = 3
# cohae: Overflow checks are nice for some, but not for us
overflow-checks = false

[profile.release]
debug = "limited"
#opt-level = 3
# strip = "symbols"
# lto = "fat"
# debug = 1
